# configrenderer

./: .gitignore  CMakeLists.txt  render.sh  test.cpp
src/: main.cpp  project.h
src/consts/: consts.h
src/geometry/: defaultmeshes.cpp  defaultmeshes.h  mesh.cpp  mesh.h
src/render/: render.cpp  render.h
src/scene/: scene.cpp  scene.h
src/shaders/: main.frag  main.vert
src/types/: matrix.cpp  matrix.h  vector.cpp  vector.h
src/video/: videowriter.cpp  videowriter.h
